[tool.poetry]
name = "xtdb-py"
version = "0.0.1"
packages = [{ include = "xtdb" }]
include  = ["xtdb/**"]
exclude = [
    "**/.idea",
    "**/.git*",
    "**/.*ignore",
    "**/.flake8",
    "**/.djlintrc",
    "**/.editorconfig",
    "**/Dockerfile*",
    "**/Makefile",
    "**/__pycache__",
]

authors = ["Donny Peeters <donny.peeters@hotmail.com>"]
maintainers = ["Donny Peeters <donny.peeters@hotmail.com>"]
description = "An ORM for XTDB."
readme = "README.md"
homepage = "https://github.com/Donnype/xtdb-py"
repository = "https://github.com/Donnype/xtdb-py"


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
